--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html><head><script defer="defer" src="/static/js/main.f11ff374.js"></script><link href="/static/css/main.f855e6bc.css" rel="stylesheet"></head><body><h1>Hello World</h1><p>git sus</p></body></html>
+<!doctype html><html><head><script defer="defer" src="/static/js/main.f11ff374.js"></script><link href="/static/css/main.f855e6bc.css" rel="stylesheet"></head><body><h1>Athul Krishnan</h1><p>welcome :)</p></body></html>
