--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,149 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>git sus</p>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>athul</title>
+    <style>
+      /* Make sure the page takes full height and no default margin */
+      html, body {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        background: #000; /* fallback background color */
+      }
+    </style>
+  </head>
+  <body>
+    <!-- Where our React app will render -->
+    <div id="root"></div>
+
+    <!-- 1) React and ReactDOM from a CDN -->
+    <script src="https://unpkg.com/react@18.2.0/umd/react.production.min.js"></script>
+    <script src="https://unpkg.com/react-dom@18.2.0/umd/react-dom.production.min.js"></script>
+    
+    <!-- 2) tsparticles (core) and react-tsparticles (wrapper) from CDN -->
+    <!-- Note: these versions may change over time -->
+    <script src="https://unpkg.com/tsparticles@2.11.1/tsparticles.bundle.min.js"></script>
+    <script src="https://unpkg.com/react-tsparticles@2.10.1/dist/react-tsparticles.min.js"></script>
+
+    <!-- 3) Our React code (inline) -->
+    <script>
+      // We'll pull out React from the global `React` var provided by the CDN
+      const { useState, useRef } = React;
+      const Particles = window["react-tsparticles"].Particles; 
+
+      // A simple React component that displays the starry background + some links
+      function HomePage() {
+        return React.createElement(
+          "div",
+          { style: { position: "relative", height: "100vh", width: "100%" } },
+          // 1) The "starry sky" from react-tsparticles
+          React.createElement(Particles, {
+            style: { position: "absolute", top: 0, left: 0 },
+            options: {
+              fpsLimit: 60,
+              background: {
+                color: "#000", // black background
+              },
+              particles: {
+                number: {
+                  value: 80,
+                },
+                color: {
+                  value: "#ffffff",
+                },
+                shape: {
+                  type: "circle",
+                },
+                opacity: {
+                  value: 1,
+                },
+                size: {
+                  value: 1,
+                },
+                move: {
+                  enable: true,
+                  speed: 0.5,
+                },
+              },
+            },
+          }),
+          
+          // 2) Content on top of the particles
+          React.createElement(
+            "div",
+            {
+              style: {
+                position: "relative",
+                zIndex: 1,
+                display: "flex",
+                flexDirection: "column",
+                alignItems: "center",
+                justifyContent: "center",
+                height: "100%",
+              },
+            },
+            React.createElement(
+              "h1",
+              { style: { color: "#fff", marginBottom: "2rem" } },
+              "hi"
+            ),
+            // Example links
+            React.createElement(
+              "div",
+              null,
+              React.createElement(
+                "a",
+                {
+                  href: "#",
+                  style: {
+                    color: "#ff6f91",
+                    margin: "0 1rem",
+                    textDecoration: "none",
+                    fontSize: "1.2rem",
+                  },
+                },
+                "About"
+              ),
+              React.createElement(
+                "a",
+                {
+                  href: "#",
+                  style: {
+                    color: "#ff6f91",
+                    margin: "0 1rem",
+                    textDecoration: "none",
+                    fontSize: "1.2rem",
+                  },
+                },
+                "Projects"
+              ),
+              React.createElement(
+                "a",
+                {
+                  href: "#",
+                  style: {
+                    color: "#ff6f91",
+                    margin: "0 1rem",
+                    textDecoration: "none",
+                    fontSize: "1.2rem",
+                  },
+                },
+                "Contact"
+              )
+            )
+          )
+        );
+      }
+
+      // Grab the 'root' element on the page
+      const rootElement = document.getElementById("root");
+
+      // Render our HomePage component using ReactDOM
+      ReactDOM.render(
+        React.createElement(HomePage, null),
+        rootElement
+      );
+    </script>
+  </body>
 </html>
